# jupyter-docker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.conda  Dockerfile.python  NGC_TENSORRT.md  README.md  environment_core.yml  environment_jupyter.yaml  poetry.toml  pyproject.toml  requirements.txt
glances/: glances.conf
jupyter-codeserver-proxy/: README.md  poetry.toml  pyproject.toml
jupyter-codeserver-proxy/src/: __init__.py
jupyter_codeserver_proxy/: __init__.py
kernels/base/: environment.yml  requirements.txt  setup_base.sh
kernels/python311/: environment.yml  requirements.txt  setup_python311.sh
pre-commit/: LICENSE.tmpl  cleanup
scripts/: bootstrap.sh  setup_packages.sh  setup_trt.sh  tune_kernel_opts.py  update_mirrors.sh
supervisor/: conf
