[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.poetry.urls]
documentation = "https://github.com/ksquarekumar/jupyter-docker#readme"
repository = "https://github.com/ksquarekumar/jupyter-docker"
source = "https://github.com/ksquarekumar/jupyter-docker"
license = "https://github.com/ksquarekumar/jupyter-docker#LICENSE"
issues = "https://github.com/ksquarekumar/jupyter-docker/issues"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry]
name = "jupyter-codeserver-proxy"
version = "0.0.1"
description = "\"A full-fledged pre-configured jupyter notebook environment for machine-learning\""
readme = "README.md"
license = "Apache License 2.0"
keywords = ["jupyter", "docker", "code-server"]
authors = ["krishnakumar <ksquarekumar@gmail.com>"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Framework :: Jupyter :: JupyterLab :: 3",
  "Framework :: Jupyter :: JupyterLab :: 4",
]
packages = [{ include = "jupyter_codeserver_proxy", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
torch = { version = ">=2.0.1", python = ">=3.11", source = "torch_cu118" }
torchaudio = { version = "*", python = ">=3.11", source = "torch_cu118" }
torchvision = { version = "*", python = ">=3.11", source = "torch_cu118" }
jaxlib = { version = ">=0.4.14", extras = [
  "cuda12_pip",
], python = ">=3.11", source = "jax_cuda" }
jax = { version = ">=0.4.14" }
flax = { version = ">=0.7.4" }
scikit-learn = { version = ">=1.3.0" }
transformers = { version = ">=4.33.1" }
datasets = { version = ">=2.14.5" }
tokenizers = { version = ">=0.14.0" }
optimum = { version = ">=1.13.1" }
accelerate = { version = ">=0.22.0" }
tensorflow = { version = ">=2.13.0" }
tensorflow-text = { version = ">=2.13.0" }
keras = { version = ">=2.14.0" }
keras-nlp = { version = ">=0.6.1" }
onnxruntime = { version = ">=1.15.1" }
onnxruntime-tools = { version = ">=1.7.0" }
deepspeed = { version = ">=0.10.3" }
optuna = { version = ">=3.3.0" }
sigopt = { version = ">=8.8.2" }
fairscale = { version = ">=0.4.13" }
onnxconverter-common = { version = ">=1.14.0" }
tf2onnx = { version = ">=1.15.1" }
sagemaker = { version = ">=2.185.0" }
ray = { version = ">=2.6.3", extras = ["all"] }
nvidia-pytriton = { version = ">=0.3.0" }
olive-ai = { version = ">=0.3.1", extras = ["gpu"] }
pydantic = { version = ">=2.3.0" }
Pillow = { version = ">=10.0.0" }
timm = { version = ">=0.9.7" }
natten = { version = ">=0.14.6" }
decord = { version = ">=0.6.0" }
sentencepiece = { version = ">=0.1.99" }
protobuf = { version = ">=4.24.3" }
codecarbon = { version = ">=2.3.1" }
joblib = ">=1.3.2"
pathos = ">=0.3.1"
dill = ">=0.3.7"
structlog = ">=23.1.0"
orjson = ">=3.9.7"
cached_property = ">=1.5.2"
click = ">=8.1.7"
boto3 = ">=1.28.47"
librosa = { version = ">=0.10.1" }
pyctcdecode = { version = ">=0.5.0" }
phonemizer = { version = ">=3.2.1" }
kenlm = { version = ">=0.2.0" }
av = { version = ">=10.0.0" }
soundfile = ">=0.12.1"
supervisor = "^4.2.5"
setuptools = "^68.2.2"
setuptools-rust = "^1.7.0"
python-build = "^0.2.13"
wheel = "^0.41.2"
flit = "^3.9.0"
hatchling = "^1.18.0"
sagemaker-training = "^4.7.0"
multi-model-server = "^1.1.11"
visualpython = "^2.4.9"
vpython = "^7.6.4"
nbdime = "^3.2.1"
ipympl = "^0.9.3"
cython = "^3.0.2"
jupyterhub = "^4.0.2"
jupyterlab = "<4.0.0a0"
jupyter-server = "^2.7.3"
dask = "^2023.9.1"
notebook = "<7.0.0"
nbconvert = "<7.0.0"
jupytext = "^1.15.1"
ipython = "^8.15.0"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-nbextensions-configurator = "^0.6.3"
jupyter-panel-proxy = "^0.1.0"
elyra = { extras = ["all"], version = "^3.15.0" }
jupyterlab-autoversion = "^0.3.6"
lineapy = "^0.2.3"
credstash = "^1.17.1"
cryptography = "^41.0.3"
lux = "^0.5.1"
pd-replicator = "^0.0.1"
bqplot = "^0.12.40"
hvplot = "^0.8.4"
voila = "^0.5.3"
tqdm = "^4.66.1"
evidently = "^0.4.4"
altair = "^5.1.1"
lolviz = "^1.4.4"
ipyvolume = "^0.6.3"
ipywidgets = "^8.1.1"
ipyleaflet = "^0.17.4"
qgrid = "^1.3.1"
ipydatagrid = "^1.2.0"
ipyaggrid = "^0.5.0"
pythreejs = "^2.4.2"
sidecar = "^0.7.0"
ruff = "^0.0.289"
black = "^23.9.1"
nb-black = "^1.0.7"
nbqa = { extras = ["toolchain"], version = "^1.7.0" }
jupyter-nbrequirements = "^0.7.3"
mypy = "^1.5.1"
ipytest = "^0.13.3"
nbcelltests = "^0.2.3"
jupyter-dash = "^0.4.2"
jupyter-lsp = "^2.2.0"
jupyterlab-lsp = "^4.2.0"
python-lsp-server = { extras = ["all"], version = "^1.8.0" }
pylsp-mypy = "^0.6.7"
python-lsp-black = "^1.3.0"
python-lsp-ruff = "^1.5.1"
pyls-isort = "^0.2.2"
jupyterlab-code-formatter = "^2.2.1"
lckr-jupyterlab-variableinspector = "^3.0.9"
jupyterlab-spellchecker = "<=0.8.4"
jupyterlab-fonts = "^2.1.1"
jupyterlab-visualpython = "^2.4.9"
dask-labextension = "<7.0.0"
jupyterlab-autoplot = "^0.5.0"
jupyterlab-widgets = "^3.0.9"
jupyterlab-git = "^0.42.0"
jupyterlab-tensorboard-pro = "^0.8.0"
jupyterlab-fasta = "^3.3.0"
jupyterlab-geojson = "^3.4.0"
jupyterlab-katex = "^3.4.0"
jupyterlab-mathjax2 = "^4.0.0"
jupyterlab-mathjax3 = "^4.3.0"
jupyterlab-vega3 = "^3.3.0"
jupyterlab-theme-solarized-dark = "^3.0.0"
theme-darcula = "^4.0.0"
conda-lock = "^2.3.0"
filprofiler = "^2023.3.1"
yappi = "^1.4.0"
viztracer = "^0.15.6"
loguru = "^0.7.2"
icecream = "^2.1.3"
uvicorn = "^0.23.2"
virtualenv = "^20.24.5"
appdirs = "^1.4.4"
pyngrok = ">=6.1.0"
pybind11 = ">=2.11.1"
pythran = ">=0.14.0"
scipy = ">=1.11.2"
cloudpickle = ">=2.2.1"
tornado = ">=6.3.3"
psutil = ">=5.9.5"
xgboost = ">=1.1.0"
typing-extensions = ">=4.7.1"
decorators = ">=2.0.7"
attrs = ">=23.1.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.9.1"
mypy = ">=1.5.1"
ruff = ">=0.0.289"
nbqa = ">=1.7.0"
pre-commit = ">=3.4.0"
pyclean = ">=2.7.4"
commitizen = ">=3.8.2"
watchdog = ">=3.0.0"
poetry2conda = ">=0.3.0"

[tool.poetry2conda]
name = "python3"

[tool.poetry.scripts]
codeserver = "jupyter_codeserver_proxy:setup_codeserver"
