[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.poetry.urls]
documentation = "https://github.com/ksquarekumar/jupyter-docker#readme"
repository = "https://github.com/ksquarekumar/jupyter-docker"
source = "https://github.com/ksquarekumar/jupyter-docker"
license = "https://github.com/ksquarekumar/jupyter-docker#LICENSE"
issues = "https://github.com/ksquarekumar/jupyter-docker/issues"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry]
name = "jupyter-codeserver-proxy"
version = "0.0.1"
description = "\"A full-fledged pre-configured jupyter notebook environment for machine-learning\""
readme = "README.md"
license = "Apache License 2.0"
keywords = ["jupyter", "docker", "code-server"]
authors = ["krishnakumar <ksquarekumar@gmail.com>"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Framework :: Jupyter :: JupyterLab :: 3",
]
packages = [{ include = "jupyter_codeserver_proxy", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
dill = { version = "^0.3.7", python = "^3.11" }
pathos = { version = "^0.3.1", python = "^3.11" }
joblib = { version = "^1.3.2", python = "^3.11" }
structlog = { version = "^23.1.0", python = "^3.11" }
orjson = { version = "^3.9.7", python = "^3.11" }
click = { version = "^8.1.7", python = "^3.11" }
boto3 = { version = "^1.28.47", python = "^3.11" }
setuptools = { version = "^68.2.2", python = "^3.11" }
setuptools-rust = { version = "^1.7.0", python = "^3.11" }
python-build = { version = "^0.2.13", python = "^3.11" }
wheel = { version = "^0.41.2", python = "^3.11" }
flit = { version = "^3.9.0", python = "^3.11" }
hatchling = { version = "^1.18.0", python = "^3.11" }
visualpython = { version = "^2.4.9", python = "^3.11" }
vpython = { version = "^7.6.4", python = "^3.11" }
nbdime = { version = "^3.2.1", python = "^3.11" }
ipympl = { version = "^0.9.3", python = "^3.11" }
jupyterhub = { version = "^4.0.2", python = "^3.11" }
jupyterlab = { version = "<4.0.0a0", python = "^3.11" }
jupyter-server = { version = "^2.7.3", python = "^3.11" }
notebook = { version = "<7.0.0", python = "^3.11" }
nbconvert = { version = "<7.0.0", python = "^3.11" }
jupytext = { version = "^1.15.1", python = "^3.11" }
ipython = { version = "^8.15.0", python = "^3.11" }
jupyter-contrib-nbextensions = { version = "^0.7.0", python = "^3.11" }
jupyter-nbextensions-configurator = { version = "^0.6.3", python = "^3.11" }
jupyter-panel-proxy = { version = "^0.1.0", python = "^3.11" }
elyra = { version = "^3.15.0", extras = ["all"], python = "^3.11" }
jupyterlab-autoversion = { version = "^0.3.6", python = "^3.11" }
lineapy = { version = "^0.2.3", python = "^3.11" }
credstash = { version = "^1.17.1", python = "^3.11" }
cryptography = { version = "^41.0.3", python = "^3.11" }
lux = { version = "^0.5.1", python = "^3.11" }
pd-replicator = { version = "^0.0.1", python = "^3.11" }
bqplot = { version = "^0.12.40", python = "^3.11" }
hvplot = { version = "^0.8.4", python = "^3.11" }
voila = { version = "^0.5.3", python = "^3.11" }
tqdm = { version = "^4.66.1", python = "^3.11" }
evidently = { version = "^0.4.4", python = "^3.11" }
altair = { version = "^5.1.1", python = "^3.11" }
lolviz = { version = "^1.4.4", python = "^3.11" }
ipyvolume = { version = "^0.6.3", python = "^3.11" }
ipywidgets = { version = "^8.1.1", python = "^3.11" }
ipyleaflet = { version = "^0.17.4", python = "^3.11" }
qgrid = { version = "^1.3.1", python = "^3.11" }
ipydatagrid = { version = "^1.2.0", python = "^3.11" }
ipyaggrid = { version = "^0.5.0", python = "^3.11" }
pythreejs = { version = "^2.4.2", python = "^3.11" }
sidecar = { version = "^0.7.0", python = "^3.11" }
jupyter-nbrequirements = { version = "^0.7.3", python = "^3.11" }
ipytest = { version = "^0.13.3", python = "^3.11" }
nbcelltests = { version = "^0.2.3", python = "^3.11" }
jupyter-dash = { version = "^0.4.2", python = "^3.11" }
jupyter-lsp = { version = "^2.2.0", python = "^3.11" }
jupyterlab-lsp = { version = "^4.2.0", python = "^3.11" }
python-lsp-server = { extras = ["all"], version = "^1.8.0", python = "^3.11" }
pylsp-mypy = { version = "^0.6.7", python = "^3.11" }
python-lsp-black = { version = "^1.3.0", python = "^3.11" }
python-lsp-ruff = { version = "^1.5.1", python = "^3.11" }
pyls-isort = { version = "^0.2.2", python = "^3.11" }
jupyterlab-code-formatter = { version = "^2.2.1", python = "^3.11" }
lckr-jupyterlab-variableinspector = { version = "^3.0.9", python = "^3.11" }
jupyterlab-spellchecker = { version = "<=0.8.4", python = "^3.11" }
jupyterlab-fonts = { version = "^2.1.1", python = "^3.11" }
jupyterlab-visualpython = { version = "^2.4.9", python = "^3.11" }
dask-labextension = { version = "<7.0.0", python = "^3.11" }
jupyterlab-autoplot = { version = "^0.5.0", python = "^3.11" }
jupyterlab-widgets = { version = "^3.0.9", python = "^3.11" }
jupyterlab-git = { version = "^0.42.0", python = "^3.11" }
jupyterlab-tensorboard-pro = { version = "^0.8.0", python = "^3.11" }
jupyterlab-fasta = { version = "^3.3.0", python = "^3.11" }
jupyterlab-geojson = { version = "^3.4.0", python = "^3.11" }
jupyterlab-katex = { version = "^3.4.0", python = "^3.11" }
jupyterlab-mathjax2 = { version = "^4.0.0", python = "^3.11" }
jupyterlab-mathjax3 = { version = "^4.3.0", python = "^3.11" }
jupyterlab-vega3 = { version = "^3.3.0", python = "^3.11" }
jupyterlab-theme-solarized-dark = { version = "^3.0.0", python = "^3.11" }
theme-darcula = { version = "^4.0.0", python = "^3.11" }
filprofiler = { version = "^2023.3.1", python = "^3.11" }
yappi = { version = "^1.4.0", python = "^3.11" }
viztracer = { version = "^0.15.6", python = "^3.11" }
loguru = { version = "^0.7.2", python = "^3.11" }
icecream = { version = "^2.1.3", python = "^3.11" }
appdirs = { version = "^1.4.4", python = "^3.11" }
pyngrok = { version = "^6.1.0", python = "^3.11" }
cloudpickle = { version = "^2.2.1", python = "^3.11" }
psutil = { version = "^5.9.5", python = "^3.11" }
typing-extensions = { version = "^4.7.1", python = "^3.11" }
decorators = { version = "^2.0.7", python = "^3.11" }
pydantic = { version = "<2.0.0", python = "^3.11" }
attrs = { version = "^23.1.0", python = "^3.11" }
torch = { version = "^2.0.1", python = "^3.11", source = "torch_cu118" }
torchaudio = { version = "*", python = "^3.11", source = "torch_cu118" }
torchvision = { version = "*", python = "^3.11", source = "torch_cu118" }
jaxlib = { version = "^0.4.14", extras = [
  "cuda12_pip",
], python = "^3.11", source = "jax_cuda" }
jax = { version = "^0.4.14", python = "^3.11" }
flax = { version = "^0.7.4", python = "^3.11" }
optax = { version = "^0.1.7", python = "^3.11" }
transformers = { version = "^4.33.1", extras = [
  "tf",
  "sklearn",
  "accelerate",
  "tokenizers",
  "onnx",
  "onnxruntime",
  "modelcreation",
  "sagemaker",
  "deepspeed",
  "fairscale",
  "optuna",
  "ray",
  "sigopt",
  "integrations",
  "serving",
  "audio",
  "video",
  "codecarbon",
  "timm",
  "natten",
  "sentencepiece",
], python = "^3.11" }
diffusers = { version = "^0.21.1", python = "^3.11" }
opencv-python = { version = "^4.8.0.76", python = "^3.11" }
cached_property = { version = "^1.5.2", python = "^3.11" }
optimum = { version = "^1.13.1", extras = [
  "onnxruntime",
  "onnxruntime-gpu",
  "exporters",
  "exporters-gpu",
  "intel",
  "openvino",
  "nncf",
  "neural-compressor",
], python = "^3.11" }
dask = { version = "^2023.9.1", extras = ["all"], python = "^3.11" }
olive-ai = { version = "^0.3.1", extras = ["gpu"], python = "^3.11" }
pybind11 = { version = "^2.11.1", python = "^3.11" }
protobuf = { version = "^3.20.2", python = "^3.11" }
pythran = { version = "^0.14.0", python = "^3.11" }
cython = { version = "^3.0.2", python = "^3.11" }
transonic = { version = "^0.5.3", python = "^3.11" }

[tool.poetry.group.test.dependencies]
pytest = { version = "^7.4.2", python = "^3.11" }
pytest-xdist = { version = "^3.3.1", python = "^3.11" }
timeout-decorator = { version = "^0.5.0", python = "^3.11" }
datasets = { version = "^2.14.5", python = "^3.11" }
evaluate = { version = "^0.4.0", python = "^3.11" }
parametrized = { version = "^66.0.0", python = "^3.11" }

[tool.poetry.group.dev.dependencies]
black = { version = "^23.9.1", python = "^3.11" }
mypy = { version = "^1.5.1", python = "^3.11" }
ruff = { version = "^0.0.289", python = "^3.11" }
nbqa = { extras = ["toolchain"], version = "^1.7.0", python = "^3.11" }
pre-commit = { version = "^3.4.0", python = "^3.11" }
commitizen = { version = "^3.8.2", python = "^3.11" }
watchdog = { version = "^3.0.0", python = "^3.11" }
virtualenv = { version = "^20.0.24", python = "^3.11" }
conda-lock = { version = "^2.3.0", python = "^3.11" }
pyclean = { version = "^2.7.4", python = "^3.11" }
poetry2conda = { version = "^0.3.0", python = "^3.11" }

[tool.poetry2conda]
name = "python311"

[tool.poetry.scripts]
codeserver = "jupyter_codeserver_proxy:setup_codeserver"
